[package]
name = "aincrad-ebpf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"  

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
network-types = { version = "0.0.6", default-features = false }
aincrad-common = { path = "../aincrad-common" }
crc32fast = { version = "1.5", default-features = false }
memchr = { version = "2.8", default-features = false }
zerocopy = { version = "0.7.35" }
bytemuck = { version = "1.25", features = ["derive"] }

[profile.dev]
panic = "abort"
debug = true 

[profile.release]
panic = "abort"

